// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`spgist.sql > line 12 1`] = `
[
  "insert into spgist_point_tbl (id, p)
select g, point(g*10, g*10) from generate_series(1, 10) g",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 30,
                  "name": "id",
                },
              },
              {
                "ResTarget": {
                  "location": 34,
                  "name": "p",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "spgist_point_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "g",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 86,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 10,
                                        },
                                        "location": 89,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 70,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 44,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "g",
                              },
                            },
                          ],
                          "location": 44,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 47,
                      "val": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "g",
                                        },
                                      },
                                    ],
                                    "location": 53,
                                  },
                                },
                                "location": 54,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "*",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 10,
                                    },
                                    "location": 55,
                                  },
                                },
                              },
                            },
                            {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "g",
                                        },
                                      },
                                    ],
                                    "location": 59,
                                  },
                                },
                                "location": 60,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "*",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 10,
                                    },
                                    "location": 61,
                                  },
                                },
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "point",
                              },
                            },
                          ],
                          "location": 47,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`spgist.sql > line 21 1`] = `
[
  "select g+100000, point(g*10+1, g*10+1) from generate_series(1, 10000) g",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "g",
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 60,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 10000,
                                    },
                                    "location": 63,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "generate_series",
                                  },
                                },
                              ],
                              "location": 44,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "g",
                              },
                            },
                          ],
                          "location": 7,
                        },
                      },
                      "location": 8,
                      "name": [
                        {
                          "String": {
                            "sval": "+",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 100000,
                          },
                          "location": 9,
                        },
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 17,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "g",
                                        },
                                      },
                                    ],
                                    "location": 23,
                                  },
                                },
                                "location": 24,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "*",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 10,
                                    },
                                    "location": 25,
                                  },
                                },
                              },
                            },
                            "location": 27,
                            "name": [
                              {
                                "String": {
                                  "sval": "+",
                                },
                              },
                            ],
                            "rexpr": {
                              "A_Const": {
                                "ival": {
                                  "ival": 1,
                                },
                                "location": 28,
                              },
                            },
                          },
                        },
                        {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "g",
                                        },
                                      },
                                    ],
                                    "location": 31,
                                  },
                                },
                                "location": 32,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "*",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 10,
                                    },
                                    "location": 33,
                                  },
                                },
                              },
                            },
                            "location": 35,
                            "name": [
                              {
                                "String": {
                                  "sval": "+",
                                },
                              },
                            ],
                            "rexpr": {
                              "A_Const": {
                                "ival": {
                                  "ival": 1,
                                },
                                "location": 36,
                              },
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "point",
                          },
                        },
                      ],
                      "location": 17,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`spgist.sql > line 24 1`] = `
[
  "delete from spgist_point_tbl where id % 2 = 1",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "spgist_point_tbl",
              "relpersistence": "p",
            },
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "id",
                            },
                          },
                        ],
                        "location": 35,
                      },
                    },
                    "location": 38,
                    "name": [
                      {
                        "String": {
                          "sval": "%",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 2,
                        },
                        "location": 40,
                      },
                    },
                  },
                },
                "location": 42,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 44,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`spgist.sql > line 29 1`] = `
[
  "delete from spgist_point_tbl where id < 10000",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "spgist_point_tbl",
              "relpersistence": "p",
            },
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "id",
                        },
                      },
                    ],
                    "location": 35,
                  },
                },
                "location": 38,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 10000,
                    },
                    "location": 40,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`spgist.sql > line 31 1`] = `
[
  "vacuum spgist_point_tbl",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 7,
                    "relname": "spgist_point_tbl",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`spgist.sql > line 39 1`] = `
[
  "select box(point(i,j),point(i+s,j+s))
  from generate_series(1,100,5) i,
       generate_series(1,100,5) j,
       generate_series(1,10) s",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 61,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 100,
                                    },
                                    "location": 63,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 5,
                                    },
                                    "location": 67,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "generate_series",
                                  },
                                },
                              ],
                              "location": 45,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "j",
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 96,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 100,
                                    },
                                    "location": 98,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 5,
                                    },
                                    "location": 102,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "generate_series",
                                  },
                                },
                              ],
                              "location": 80,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "s",
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 131,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 10,
                                    },
                                    "location": 133,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "generate_series",
                                  },
                                },
                              ],
                              "location": 115,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "i",
                                      },
                                    },
                                  ],
                                  "location": 17,
                                },
                              },
                              {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "j",
                                      },
                                    },
                                  ],
                                  "location": 19,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "point",
                                },
                              },
                            ],
                            "location": 11,
                          },
                        },
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Expr": {
                                  "kind": "AEXPR_OP",
                                  "lexpr": {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "i",
                                          },
                                        },
                                      ],
                                      "location": 28,
                                    },
                                  },
                                  "location": 29,
                                  "name": [
                                    {
                                      "String": {
                                        "sval": "+",
                                      },
                                    },
                                  ],
                                  "rexpr": {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "s",
                                          },
                                        },
                                      ],
                                      "location": 30,
                                    },
                                  },
                                },
                              },
                              {
                                "A_Expr": {
                                  "kind": "AEXPR_OP",
                                  "lexpr": {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "j",
                                          },
                                        },
                                      ],
                                      "location": 32,
                                    },
                                  },
                                  "location": 33,
                                  "name": [
                                    {
                                      "String": {
                                        "sval": "+",
                                      },
                                    },
                                  ],
                                  "rexpr": {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "s",
                                          },
                                        },
                                      ],
                                      "location": 34,
                                    },
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "point",
                                },
                              },
                            ],
                            "location": 22,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "box",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`spgist.sql > line 45 1`] = `
[
  "select count(*)
  from (values (point(5,5)),(point(8,8)),(point(12,12))) v(p)
 where exists(select * from spgist_box_tbl b where b.b && box(v.p,v.p))",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "v",
                    "colnames": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                    ],
                  },
                  "subquery": {
                    "SelectStmt": {
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "valuesLists": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 5,
                                        },
                                        "location": 38,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 5,
                                        },
                                        "location": 40,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "point",
                                      },
                                    },
                                  ],
                                  "location": 32,
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 8,
                                        },
                                        "location": 51,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 8,
                                        },
                                        "location": 53,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "point",
                                      },
                                    },
                                  ],
                                  "location": 45,
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 12,
                                        },
                                        "location": 64,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 12,
                                        },
                                        "location": 67,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "point",
                                      },
                                    },
                                  ],
                                  "location": 58,
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "agg_star": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "SubLink": {
                "location": 85,
                "subLinkType": "EXISTS_SUBLINK",
                "subselect": {
                  "SelectStmt": {
                    "fromClause": [
                      {
                        "RangeVar": {
                          "alias": {
                            "aliasname": "b",
                          },
                          "inh": true,
                          "location": 106,
                          "relname": "spgist_box_tbl",
                          "relpersistence": "p",
                        },
                      },
                    ],
                    "limitOption": "LIMIT_OPTION_DEFAULT",
                    "op": "SETOP_NONE",
                    "targetList": [
                      {
                        "ResTarget": {
                          "location": 99,
                          "val": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "A_Star": {},
                                },
                              ],
                              "location": 99,
                            },
                          },
                        },
                      },
                    ],
                    "whereClause": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "b",
                                },
                              },
                              {
                                "String": {
                                  "sval": "b",
                                },
                              },
                            ],
                            "location": 129,
                          },
                        },
                        "location": 133,
                        "name": [
                          {
                            "String": {
                              "sval": "&&",
                            },
                          },
                        ],
                        "rexpr": {
                          "FuncCall": {
                            "args": [
                              {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "v",
                                      },
                                    },
                                    {
                                      "String": {
                                        "sval": "p",
                                      },
                                    },
                                  ],
                                  "location": 140,
                                },
                              },
                              {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "v",
                                      },
                                    },
                                    {
                                      "String": {
                                        "sval": "p",
                                      },
                                    },
                                  ],
                                  "location": 144,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "box",
                                },
                              },
                            ],
                            "location": 136,
                          },
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`spgist.sql > line 56 1`] = `
[
  "insert into spgist_text_tbl (id, t)
select g, 'f' || repeat('o', 100) || g from generate_series(1, 10000) g
union all
select g, 'baaaaaaaaaaaaaar' || g from generate_series(1, 1000) g",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 29,
                  "name": "id",
                },
              },
              {
                "ResTarget": {
                  "location": 33,
                  "name": "t",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "spgist_text_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "all": true,
                "larg": {
                  "fromClause": [
                    {
                      "RangeFunction": {
                        "alias": {
                          "aliasname": "g",
                        },
                        "functions": [
                          {
                            "List": {
                              "items": [
                                {
                                  "FuncCall": {
                                    "args": [
                                      {
                                        "A_Const": {
                                          "ival": {
                                            "ival": 1,
                                          },
                                          "location": 96,
                                        },
                                      },
                                      {
                                        "A_Const": {
                                          "ival": {
                                            "ival": 10000,
                                          },
                                          "location": 99,
                                        },
                                      },
                                    ],
                                    "funcformat": "COERCE_EXPLICIT_CALL",
                                    "funcname": [
                                      {
                                        "String": {
                                          "sval": "generate_series",
                                        },
                                      },
                                    ],
                                    "location": 80,
                                  },
                                },
                                {},
                              ],
                            },
                          },
                        ],
                      },
                    },
                  ],
                  "limitOption": "LIMIT_OPTION_DEFAULT",
                  "op": "SETOP_NONE",
                  "targetList": [
                    {
                      "ResTarget": {
                        "location": 43,
                        "val": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "g",
                                },
                              },
                            ],
                            "location": 43,
                          },
                        },
                      },
                    },
                    {
                      "ResTarget": {
                        "location": 46,
                        "val": {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "A_Const": {
                                    "location": 46,
                                    "sval": {
                                      "sval": "f",
                                    },
                                  },
                                },
                                "location": 50,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "||",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "FuncCall": {
                                    "args": [
                                      {
                                        "A_Const": {
                                          "location": 60,
                                          "sval": {
                                            "sval": "o",
                                          },
                                        },
                                      },
                                      {
                                        "A_Const": {
                                          "ival": {
                                            "ival": 100,
                                          },
                                          "location": 65,
                                        },
                                      },
                                    ],
                                    "funcformat": "COERCE_EXPLICIT_CALL",
                                    "funcname": [
                                      {
                                        "String": {
                                          "sval": "repeat",
                                        },
                                      },
                                    ],
                                    "location": 53,
                                  },
                                },
                              },
                            },
                            "location": 70,
                            "name": [
                              {
                                "String": {
                                  "sval": "||",
                                },
                              },
                            ],
                            "rexpr": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "g",
                                    },
                                  },
                                ],
                                "location": 73,
                              },
                            },
                          },
                        },
                      },
                    },
                  ],
                },
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_UNION",
                "rarg": {
                  "fromClause": [
                    {
                      "RangeFunction": {
                        "alias": {
                          "aliasname": "g",
                        },
                        "functions": [
                          {
                            "List": {
                              "items": [
                                {
                                  "FuncCall": {
                                    "args": [
                                      {
                                        "A_Const": {
                                          "ival": {
                                            "ival": 1,
                                          },
                                          "location": 173,
                                        },
                                      },
                                      {
                                        "A_Const": {
                                          "ival": {
                                            "ival": 1000,
                                          },
                                          "location": 176,
                                        },
                                      },
                                    ],
                                    "funcformat": "COERCE_EXPLICIT_CALL",
                                    "funcname": [
                                      {
                                        "String": {
                                          "sval": "generate_series",
                                        },
                                      },
                                    ],
                                    "location": 157,
                                  },
                                },
                                {},
                              ],
                            },
                          },
                        ],
                      },
                    },
                  ],
                  "limitOption": "LIMIT_OPTION_DEFAULT",
                  "op": "SETOP_NONE",
                  "targetList": [
                    {
                      "ResTarget": {
                        "location": 125,
                        "val": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "g",
                                },
                              },
                            ],
                            "location": 125,
                          },
                        },
                      },
                    },
                    {
                      "ResTarget": {
                        "location": 128,
                        "val": {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "A_Const": {
                                "location": 128,
                                "sval": {
                                  "sval": "baaaaaaaaaaaaaar",
                                },
                              },
                            },
                            "location": 147,
                            "name": [
                              {
                                "String": {
                                  "sval": "||",
                                },
                              },
                            ],
                            "rexpr": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "g",
                                    },
                                  },
                                ],
                                "location": 150,
                              },
                            },
                          },
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`spgist.sql > line 64 1`] = `
[
  "insert into spgist_text_tbl (id, t)
select -g, 'f' || repeat('o', 100-g) || 'surprise' from generate_series(1, 100) g",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 29,
                  "name": "id",
                },
              },
              {
                "ResTarget": {
                  "location": 33,
                  "name": "t",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "spgist_text_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "g",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 108,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 100,
                                        },
                                        "location": 111,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 92,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 43,
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "location": 43,
                          "name": [
                            {
                              "String": {
                                "sval": "-",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "g",
                                  },
                                },
                              ],
                              "location": 44,
                            },
                          },
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 47,
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "A_Const": {
                                  "location": 47,
                                  "sval": {
                                    "sval": "f",
                                  },
                                },
                              },
                              "location": 51,
                              "name": [
                                {
                                  "String": {
                                    "sval": "||",
                                  },
                                },
                              ],
                              "rexpr": {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "location": 61,
                                        "sval": {
                                          "sval": "o",
                                        },
                                      },
                                    },
                                    {
                                      "A_Expr": {
                                        "kind": "AEXPR_OP",
                                        "lexpr": {
                                          "A_Const": {
                                            "ival": {
                                              "ival": 100,
                                            },
                                            "location": 66,
                                          },
                                        },
                                        "location": 69,
                                        "name": [
                                          {
                                            "String": {
                                              "sval": "-",
                                            },
                                          },
                                        ],
                                        "rexpr": {
                                          "ColumnRef": {
                                            "fields": [
                                              {
                                                "String": {
                                                  "sval": "g",
                                                },
                                              },
                                            ],
                                            "location": 70,
                                          },
                                        },
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "repeat",
                                      },
                                    },
                                  ],
                                  "location": 54,
                                },
                              },
                            },
                          },
                          "location": 73,
                          "name": [
                            {
                              "String": {
                                "sval": "||",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "location": 76,
                              "sval": {
                                "sval": "surprise",
                              },
                            },
                          },
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`spgist.sql > line 68 1`] = `
[
  "create index spgist_point_idx2 on spgist_point_tbl using spgist(p) with (fillfactor = 9)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "spgist",
            "idxname": "spgist_point_idx2",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "p",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 9,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "fillfactor",
                  "location": 73,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 34,
              "relname": "spgist_point_tbl",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`spgist.sql > line 72 1`] = `
[
  "alter index spgist_point_idx set (fillfactor = 90)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "List": {
                      "items": [
                        {
                          "DefElem": {
                            "arg": {
                              "Integer": {
                                "ival": 90,
                              },
                            },
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "fillfactor",
                            "location": 34,
                          },
                        },
                      ],
                    },
                  },
                  "subtype": "AT_SetRelOptions",
                },
              },
            ],
            "objtype": "OBJECT_INDEX",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "spgist_point_idx",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`spgist.sql > line 76 1`] = `
[
  "create domain spgist_text as varchar",
  {
    "stmts": [
      {
        "stmt": {
          "CreateDomainStmt": {
            "domainname": [
              {
                "String": {
                  "sval": "spgist_text",
                },
              },
            ],
            "typeName": {
              "location": 29,
              "names": [
                {
                  "String": {
                    "sval": "pg_catalog",
                  },
                },
                {
                  "String": {
                    "sval": "varchar",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`spgist.sql > line 81 1`] = `
[
  "select * from spgist_domain_tbl where f1 = 'fo'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "spgist_domain_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 38,
                  },
                },
                "location": 41,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 43,
                    "sval": {
                      "sval": "fo",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`spgist.sql > line 85 1`] = `
[
  "create unlogged table spgist_unlogged_tbl(id serial, b box)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 22,
              "relname": "spgist_unlogged_tbl",
              "relpersistence": "u",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "id",
                  "is_local": true,
                  "location": 42,
                  "typeName": {
                    "location": 45,
                    "names": [
                      {
                        "String": {
                          "sval": "serial",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 53,
                  "typeName": {
                    "location": 55,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`spgist.sql > line 88 1`] = `
[
  "select box(point(i,j))
  from generate_series(1,100,5) i,
       generate_series(1,10,5) j",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 46,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 100,
                                    },
                                    "location": 48,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 5,
                                    },
                                    "location": 52,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "generate_series",
                                  },
                                },
                              ],
                              "location": 30,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "j",
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 81,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 10,
                                    },
                                    "location": 83,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 5,
                                    },
                                    "location": 86,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "generate_series",
                                  },
                                },
                              ],
                              "location": 65,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "i",
                                      },
                                    },
                                  ],
                                  "location": 17,
                                },
                              },
                              {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "j",
                                      },
                                    },
                                  ],
                                  "location": 19,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "point",
                                },
                              },
                            ],
                            "location": 11,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "box",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
